--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -6,6 +6,14 @@ RUN apt update \
     && apt install -y default-mysql-client zlib1g-dev libzip-dev unzip \
     && docker-php-ext-install pdo_mysql zip
 
+RUN apt-get update && apt-get install -y libpng-dev libjpeg-dev libfreetype6-dev \
+    && docker-php-ext-configure gd --with-freetype --with-jpeg \
+    && docker-php-ext-install gd
+
+RUN apt-get update && apt-get install -y libmagickwand-dev --no-install-recommends \
+    && pecl install imagick \
+    && docker-php-ext-enable imagick
+
 RUN curl -sS https://getcomposer.org/installer | php \
     && mv composer.phar /usr/local/bin/composer \
     && composer self-update
