--- a/src/composer.json
+++ b/src/composer.json
@@ -9,7 +9,8 @@
         "bacon/bacon-qr-code": "^3.0",
         "laravel/fortify": "^1.24",
         "laravel/framework": "^11.9",
-        "laravel/tinker": "^2.9"
+        "laravel/tinker": "^2.9",
+        "spatie/laravel-permission": "^6.16"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
