--- a/src/composer.json
+++ b/src/composer.json
@@ -10,6 +10,7 @@
         "laravel/fortify": "^1.24",
         "laravel/framework": "^11.9",
         "laravel/tinker": "^2.9",
+        "maatwebsite/excel": "^3.1",
         "spatie/laravel-permission": "^6.16"
     },
     "require-dev": {
